	================ 2.4.9 ==============
2004-08-03  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Update pubdate.

2004-08-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkexpander.xml (gtk.expander_new_with_mnemonic)
	(gtk.Expander) Note that label is optional and defaults to None.
	(set_label) (set_label_widget) Note that label and label_widget
	can be None.

	* pygtk-gtkcomboboxentry.xml (gtk.ComboBoxEntry) Default value
	for column is -1.
	(Description) (set_text_column)
	Note that the text column can only be set once.

2004-07-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenu.xml (Properties) Swap Child and Style property titles.

2004-07-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeview.xml (get_drag_dest_row) None is a valid return
	value.

	* pygtk-gtkliststore.xml (insert_before) (insert_after)
	sibling param can be None in PyGTK 2.4.

2004-07-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkicontheme.xml (Description) Fix broken ulink tag.

	* pygtk-gtkexpander.xml (Description) Fix bug in example code using
	"expanded" property signal. Add note about using "activate" signal.

2004-07-27  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkatom.xml (Description) Add note on support for
	Atom and string comparsion support in PyGTK 2.4.

	* pygtk-gdkwindow.xml (property_get) (property_change) Add links for
	gtk.gdk.Atom references. Fixes #148569. Thanks to Abel Daniel.

2004-07-24  John Finlay  <finlay@moeraki.com>

	* pygtk-gdk-constants.xml (Filter Return Constants) Add reference to
	gtk.gdk.Window.Add_filter() method.

	* pygtk-gdkwindow.xml (add_filter) Add initializer for data.
	Describe return value for callback.

2004-07-23  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreemodel.xml ("row-inserted") ("row-changed") Add
	detail on when these are emitted.

2004-07-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktextbuffer.xml (add_selection_clipboard)
	(remove_selection_clipboard)