@@ -77,7 +77,7 @@
 <emphasis role="bold">Functions</emphasis>
 
 <methodsynopsis language="python">
-        <methodname><link linkend="function-gtk--clipboard-get">gtk.clipbaord-get</link></methodname>
+        <methodname><link linkend="function-gtk--clipboard-get">gtk.clipboard-get</link></methodname>
         <methodparam><parameter role="keyword">selection</parameter><initializer>"CLIPBOARD"</initializer></methodparam>
       </methodsynopsis></programlisting>
 
