@@ -1,3 +1,9 @@
+2004-08-06  John Finlay  <finlay@moeraki.com>
+
+	* pygtk2-ref.xml Bump version number and pubdate
+
+	* pygtk-gtkclipboard.xml (Synopsis) Fix typo. (Able Daniel)
+
 	================ 2.4.9 ==============
 2004-08-03  John Finlay  <finlay@moeraki.com>
 
